# eos

backend/node/: homescreen.db  package-lock.json  package.json
backend/node/src/: app.ts  db.ts  index.ts
backend/node/src/controller/: auth.controller.ts  bookmarks.controller.ts  notes.controller.ts  rss.controller.ts  tracker.controller.ts
backend/node/src/models/: bookmark.model.ts  error.model.ts  note.model.ts  rss.model.ts  tracker.model.ts
backend/node/src/parsers/: 9a.parser.ts
backend/node/src/repository/: bookmarks.repository.ts  notes.repository.ts  rss.repository.ts  tracker.repository.ts
backend/node/src/routes/: auth.routes.ts  bookmarks.routes.ts  notes.routes.ts  rss.routes.ts  spotify.routes.ts  tracker.routes.ts
backend/rust/: Cargo.toml  homescreen.db
backend/rust/src/: main.rs
backend/rust/src/middleware/: cors.rs
backend/rust/src/services/: bookmark.rs  mod.rs  notes.rs  rss_feed.rs
extension/: background.js  content.js  manifest.json  package-lock.json  send_request.js
frontend/: package-lock.json  package.json  svelte.config.js  tsconfig.json
frontend/src/: app.html
frontend/src/lib/: RSSCustomMappers.ts  auth.ts  bookmarks.ts  environment.prod.server.ts  environment.ts  notes.ts  notifications.ts  rss.ts  spotify.ts  tracker.ts
frontend/src/lib/models/: RSS.ts  ServerData.ts  Spotify.ts  Tracker.ts
frontend/src/lib/stores/: stores.ts
frontend/src/routes/: +page.server.ts  +page.svelte  MultiComponent.svelte  RSSFeed.svelte  bottomComponent.svelte
frontend/static/: rss.json  styles.css
(+33 files in other folders)
